--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <span id="timer">Patientez</span>
     <span id="time">October 28, 2024 10:00:00</span>
 
-    <a href="https://youtube.com/watch?v=oSAQ4Konj90">Voir le trailer</a>
+    <a href="https://youtube.com/watch?v=oSAQ4Konj90" id="videolink">Voir le trailer</a>
+    <a href="htttps://github.com/AntoineLandrieux/" style="color: #8a8a8a; font-weight: normal;">AntoineLandrieux Github</a>
 
     <script src="javascript/script.js"></script>
 
