--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <span id="time">October 28, 2024 10:00:00</span>
 
     <a href="https://youtube.com/watch?v=oSAQ4Konj90" id="videolink">Voir le trailer</a>
-    <a href="htttps://github.com/AntoineLandrieux/" style="color: #8a8a8a; font-weight: normal;">AntoineLandrieux Github</a>
+    <a href="https://github.com/AntoineLandrieux/" style="color: #8a8a8a; font-weight: normal;">AntoineLandrieux Github</a>
 
     <script src="javascript/script.js"></script>
 
